--- a/src/assets/prism-a11y.css
+++ b/src/assets/prism-a11y.css
@@ -74,7 +74,7 @@ pre[class*='language-'] {
 .token.attr-name,
 .token.string,
 .token.char,
-.token.builtin,
+.token.built-in,
 .token.inserted {
   color: #aa5d00;
 }
